--- a/theme/beamerouterthemetrek.sty
+++ b/theme/beamerouterthemetrek.sty
@@ -1,3 +1,4 @@
+\RequirePackage{etex}
 \RequirePackage{tikz}
 \RequirePackage{trek-shapes}
 
@@ -13,13 +14,15 @@
 \newdimen\trek@elbow@inner@radius
 \newdimen\trek@cursorwidth
 \newdimen\trek@sidebar@width
+\newdimen\trek@left@footline@elbow@width
 \trek@margin=2mm
 \trek@titlegap=0.8mm
 \trek@elbow@height=10mm
-\trek@elbow@outer@radius=4mm
-\trek@elbow@inner@radius=2mm
+\trek@elbow@outer@radius=6mm
+\trek@elbow@inner@radius=3mm
 \trek@cursorwidth=5mm
-\trek@sidebar@width=10mm
+\trek@sidebar@width=16mm
+\trek@left@footline@elbow@width=20mm
 
 % Derived dimensions
 \newdimen\trek@full@sidebar@width
@@ -100,9 +103,98 @@
           trek/elbow/inner radius=\the\trek@elbow@inner@radius,
           trek/elbow/width=\the\elbow@width
         ]{};
-      \end{tikzpicture}
-    \end{beamercolorbox}
+      \end{tikzpicture}%
+    \end{beamercolorbox}%
   }%
+}
+
+\defbeamertemplate*{footline}{trek theme}
+{%
+  % Height and width of footer title text
+  \newdimen\@footertextwidth%
+  \newdimen\@footertextheight%
+  \setbox0=\hbox{\usebeamerfont{title in head/foot}\insertshorttitle}%
+  \@footertextwidth=\wd0%
+  \setbox1=\hbox{\usebeamerfont{title in head/foot}ML8}%
+  \@footertextheight\ht0%
+  % Height of entire footer region
+  \newdimen\footline@height
+  \footline@height=\the\trek@elbow@height
+  \advance\footline@height by \the\trek@margin
+  % Position and dimensions of elbow
+  \newdimen\elbow@x
+  \newdimen\elbow@y
+  \newdimen\elbow@height
+  \elbow@x = \the\trek@left@footline@elbow@width
+  \advance \elbow@x by \the\trek@margin
+  \elbow@y = \the\trek@margin
+  \advance \elbow@y by \the\@footertextheight
+  \elbow@height = \the\footline@height
+  \advance \elbow@height by -\the\trek@margin
+  % Position of title
+  \newdimen\half@title@width
+  \newdimen\title@x
+  \newdimen\title@y
+  \half@title@width=\@footertextwidth
+  \divide \half@title@width by 2
+  \title@x = \elbow@x
+  \advance \title@x by \the\trek@titlegap
+  \title@y = \elbow@y
+  \advance \title@y by -\the\@footertextheight
+  % Position of right cursor
+  \newdimen\cursor@x
+  \newdimen\cursor@y
+  \cursor@x = \paperwidth
+  \advance \cursor@x by -\the\trek@margin
+  \advance \cursor@x by -\the\trek@cursorwidth
+  \cursor@y = \title@y
+  % Dimensions of central bar
+  \newdimen\bar@x
+  \newdimen\bar@y
+  \newdimen\bar@width
+  \bar@x = \title@x
+  \advance \bar@x by \the\@footertextwidth
+  \advance \bar@x by \the\trek@titlegap
+  \bar@y = \title@y
+  \bar@width = \cursor@x
+  \advance \bar@width by -\the\bar@x
+  \advance \bar@width by -\the\trek@titlegap
+  % Typeset the footline
+  \leavevmode%
+  \hbox{%
+    \begin{beamercolorbox}[wd=\paperwidth,ht=\the\footline@height,left]{title in head/foot}%
+      \begin{tikzpicture}%
+        \useasboundingbox (0,0) rectangle (\paperwidth,\the\footline@height);
+        %\draw [draw=none,fill=red] (0,0) rectangle (\paperwidth,\the\footline@height);
+        % left footline elbow
+        \draw (\the\elbow@x,\the\elbow@y) node [
+          yscale=-1,
+          trek elbow,
+          trek/elbow/bar height=\the\@footertextheight,
+          trek/elbow/sidebar width=\the\trek@sidebar@width,
+          trek/elbow/inner radius=\the\trek@elbow@inner@radius,
+          trek/elbow/outer radius=\the\trek@elbow@outer@radius,
+          trek/elbow/height=\the\elbow@height,
+          trek/elbow/width=\the\trek@left@footline@elbow@width
+        ]{};
+        % left footline title
+        \draw (\the\title@x,\the\title@y) node [anchor=south west,inner sep=0]
+          {\usebeamerfont{title in head/foot}\insertshorttitle};
+        % central bar
+        \filldraw (\the\bar@x,\the\bar@y) rectangle ++(\the\bar@width,\the\@footertextheight);
+        % right cursor
+        \draw (\the\cursor@x,\the\cursor@y) node [
+          trek cursor,
+          trek/cursor/width=\the\trek@cursorwidth,
+          trek/cursor/height=\the\@footertextheight
+        ]{};
+      \end{tikzpicture}%
+    \end{beamercolorbox}%
+  }%
+}
+
+\defbeamertemplate*{sidebar left}{trek theme}
+{%
 }
 
 \makeatother
