Added a nice "wreathed-star" logo.

--- a/demo/trek-demo.tex
+++ b/demo/trek-demo.tex
@@ -1,4 +1,5 @@
 \documentclass{beamer}
+\usepackage{import}
 
 \useoutertheme{trek}
 
@@ -9,6 +10,9 @@
 \begin{frame}
   \frametitle{DATA'S FELINE COMPANION}
   Some text.
+  \begin{center}
+    \import{./}{logo.tex}
+  \end{center}
 \end{frame}
 
 \end{document}
