--- a/demo/logo.tex
+++ b/demo/logo.tex
@@ -1,4 +1,4 @@
-\begin{tikzpicture}
+%\begin{tikzpicture}
   % command to draw the right-hand wreath
   \def\wreath{%
     \begin{scope}
@@ -83,18 +83,18 @@
     \draw [line width=2.6] (0,0) circle (100);  % outer
     \draw [line width=1.3] (0,0) circle (93);   % inner
     % wreath
-    \begin{scope}[fill=black,draw=none]
+    \begin{scope}
       \wreath
       \begin{scope}[xscale=-1]\wreath\end{scope}
     \end{scope}
     % four-pointed stars
-    \begin{scope}[fill=black,draw=none]
+    \begin{scope}
       \begin{scope}[shift={(12,31)}]\fourstar\end{scope}
       \begin{scope}[shift={(22,-20)}]\fourstar\end{scope}
       \begin{scope}[shift={(-39,6)}]\fourstar\end{scope}
     \end{scope}
     % star field
-    \begin{scope}[fill=black,draw=none,line width=0]
+    \begin{scope}
       \foreach \x/\y/\r in {
         -51.0 / -63.0 / 2.1,
         -61.5 / -50.0 / 1.5,
@@ -179,4 +179,4 @@
       }
     \end{scope}
   \end{scope}
-\end{tikzpicture}
+%\end{tikzpicture}
