--- a/theme/beamerinnerthemetrek.sty
+++ b/theme/beamerinnerthemetrek.sty
@@ -6,6 +6,10 @@
 
 \defbeamertemplate*{itemize item}{trek}{\largecircle}
 
+\defbeamertemplate*{itemize subitem}{trek}{\largecircle}
+
+\defbeamertemplate*{itemize subsubitem}{trek}{\largecircle}
+
 \defbeamertemplate*{title page}{trek}{%
   % Measure size of subtitle, to go in the top right corner
   \newdimen\@subtitlewidth%
