First try at stylised enumerate items.

--- a/demo/trek-demo.tex
+++ b/demo/trek-demo.tex
@@ -66,10 +66,13 @@
   The three levels of the enumerate environment:
   \begin{enumerate}
   \item Level 1
+  \item Second item on level 1
     \begin{enumerate}
     \item Level 2
+    \item Second item on level 2
       \begin{enumerate}
       \item Level 3
+      \item Second item on level 3
       \end{enumerate}
     \end{enumerate}
   \end{enumerate}
