--- a/theme/beamercolorthemetrek.sty
+++ b/theme/beamercolorthemetrek.sty
@@ -26,7 +26,8 @@
   \setbeamercolor{institute}{parent=frametitle}
   \setbeamercolor{author}{parent=title}
   \setbeamercolor{date}{parent=title}
-  \setbeamercolor{item}{use=frametitle,fg=frametitle.fg}
+  \setbeamercolor{item}{use={frametitle},fg=frametitle.fg}
+  \setbeamercolor{item projected}{use={frametitle},fg=black,bg=frametitle.fg}
 }
 \mode<handout> {
   \setbeamercolor{background canvas}{bg=white}
