--- a/theme/beamerouterthemetrek.sty
+++ b/theme/beamerouterthemetrek.sty
@@ -15,6 +15,7 @@
 \newdimen\trek@cursorwidth
 \newdimen\trek@sidebar@width
 \newdimen\trek@left@footline@elbow@width
+\newdimen\trek@buttongap
 \trek@margin=2mm
 \trek@titlegap=1.0mm
 \trek@elbow@height=10mm
@@ -23,6 +24,7 @@
 \trek@cursorwidth=5mm
 \trek@sidebar@width=16mm
 \trek@left@footline@elbow@width=25mm
+\trek@buttongap=0.5mm
 
 % Derived dimensions
 \newdimen\trek@full@sidebar@width
