--- a/theme/trek-shapes.sty
+++ b/theme/trek-shapes.sty
@@ -32,6 +32,39 @@
   }
 }
 
+% Trek circular bullet
+\pgfkeys{/tikz/trek/circular bullet/radius/.initial = 1.25mm}
+\pgfdeclareshape{trek circular bullet}
+{
+  \saveddimen\width{\pgf@x = 2\pgfkeysvalueof{/tikz/trek/circular bullet/radius}}
+  \saveddimen\height{\pgf@x = 2\pgfkeysvalueof{/tikz/trek/circular bullet/radius}}
+  \savedanchor\centerpoint{
+    \pgf@x = 0.5\wd\pgfnodeparttextbox
+    \pgf@y = 0.5\ht\pgfnodeparttextbox
+  }
+  \anchor{center}{\centerpoint}
+  \savedanchor\basepoint{
+    \pgf@x = 0.5\wd\pgfnodeparttextbox
+    \pgf@y = 0.0\wd\pgfnodeparttextbox
+  }
+  \anchor{base}{\basepoint}
+
+  \foregroundpath{
+    \pgfpathcircle{\pgfpoint{0}{0}}{\pgfkeysvalueof{/tikz/trek/circular bullet/radius}}
+    \pgfpathclose
+    \pgfusepath{fill}
+  }
+}
+% Command to draw the circle inline in a document
+\newcommand{\trekcircle}{%
+  \newdimen\@trek@lineheight%
+  \setbox0=\hbox{I}%
+  \@trek@lineheight=\ht0%
+  \begin{tikzpicture}[baseline=-0.5\@trek@lineheight]
+    \draw node (0,0) [trek circular bullet]{};
+  \end{tikzpicture}%
+}                 
+
 % Trek elbow shape
 \pgfkeys{/tikz/trek/elbow/bar height/.initial = 7.5mm}
 \pgfkeys{/tikz/trek/elbow/outer radius/.initial = 3mm}
