Fix placement of text in footer

--- a/theme/beamerouterthemetrek.sty
+++ b/theme/beamerouterthemetrek.sty
@@ -196,7 +196,7 @@
           trek/elbow/width=\the\trek@left@footline@elbow@width
         ]{};
         % left footline title
-        \draw (\the\title@x,\the\title@y) node [anchor=south west,inner sep=0]
+        \draw (\the\title@x,\the\title@y) node [anchor=base west,inner sep=0]
           {\usebeamerfont{title in head/foot}\insertshorttitle};
         % central bar
         \filldraw (\the\bar@x,\the\bar@y) rectangle ++(\the\bar@width,\the\@footertextheight);
